Modificati path e alcuni controlli

--- a/prova.html
+++ b/prova.html
@@ -41,7 +41,7 @@
                 }       return(false);
             }
 		video = document.querySelector('video');
-		var dashPlayer = new DASHPlayer(video,'http://localhost/tesi3/prova.mpd');
+		var dashPlayer = new DASHPlayer(video,'http://localhost/tesi/prova.mpd');
 		
 	
 		
